src/main/java/com/example/springsecurityregistration/web/error/InvalidTokenException.java
package com.example.springsecurityregistration.web.error;

public class InvalidTokenException extends RuntimeException {

    public InvalidTokenException(String message) {
        super(message);
    }
}
